[package]
name = "score_websites"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
html-escape = "0.2.9"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = "0.11.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_repr = "0.1.7"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
