[package]
name = "score_websites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
futures = "0.3.17"
html-escape = "0.2.9"
once_cell = "1.10.0"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_repr = "0.1.7"
thiserror = "1.0.28"
tokio = { version = "1.9.0", features = ["full"] }
tokio-stream = "0.1.7"
tracing = "0.1.26"

[dev-dependencies]
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
anyhow = "1.0.55"
num-format = "0.4.0"
unicode-width = "0.1.9"
